[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphovex-sdk"
version = "3.0.1"
description = "Alphovex strategy SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=1.24", "pandas>=2.0"]

[tool.setuptools]
package-dir = { "alphovex_sdk" = "." }
packages = [
    "alphovex_sdk",
    "alphovex_sdk.context",
    "alphovex_sdk.errors",
    "alphovex_sdk.indicators",
    "alphovex_sdk.indicators.examples",
    "alphovex_sdk.models",
    "alphovex_sdk.strategy",
    "alphovex_sdk.typedefs",
    "alphovex_sdk.utils",
]
